force-app/main/default/objects/SGN_Group__c/SGN_Group__c.object-meta.xml
<CustomObject>
    <label>Signature Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>