force-app/main/default/objects/SGN_Group__c/fields/SGN_ELCK_RelatedSign__c.field-meta.xml
<CustomField>
    <fullName>SGN_ELCK_RelatedSign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Sign</label>
    <referenceTo>SNG_Payment__c</referenceTo>
    <relationshipLabel>Signature Groups</relationshipLabel>
    <relationshipName>Signature_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>