force-app/main/default/objects/SGN_Group__c/fields/SGN_TXT_IdExt__c.field-meta.xml
<CustomField>
    <fullName>SGN_TXT_IdExt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Identificator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>