force-app/main/default/objects/SGN_Group__c/fields/SGN_TXT_SingsRequired__c.field-meta.xml
<CustomField>
    <fullName>SGN_TXT_SingsRequired__c</fullName>
    <label>Sings Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>